--- a/src/css/home.css
+++ b/src/css/home.css
@@ -188,6 +188,9 @@ body {
   align-items: center;
   font-weight: 300;
   margin: 0;
+  margin-right: 1rem;
+  font-size: 18px;
+  cursor: pointer;
 }
 .user img {
   width: 45px;
@@ -289,4 +292,10 @@ body {
   position: fixed;
   bottom: 5%;
   right: 5%;
+}
+
+/* Display none */
+
+.hiden{
+  display: none;
 }
